Ok, a barely working new setup

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,19 @@
 				"reveal": "always"
 			},
 			"problemMatcher": []
+		},
+		{
+			"label": "Deploy to FG",
+			"type": "shell",
+			"command": "./deploy.sh",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"presentation": {
+				"reveal": "always"
+			},
+			"problemMatcher": []
 		}
 	]
 }
